# action-segmentation-visualizer

./: .gitignore  LICENSE  README.md  pyproject.toml
as-vis/: example.py
tests/: test_core.py
vis_action_seg/: __init__.py  core.py  palette.py
